object和doc模块初步提交